--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>micbioX数据平台</title>
-    <!-- <title>humanfactorPDFreader</title> -->
+    <!-- <title>micbioX数据平台</title> -->
+    <title>humanfactorPDFreader</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
